2002-08-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/345:
	* tests/defs: Add support for required=non-root, stolen
	from fileutils'	test suite.
	* tests/destdir.test: Use required=non-root.

	* tests/vtexi.test: Fix spurious failure introduced on 2002-07-30.

2002-08-17  Tom Tromey  <tromey@redhat.com>

	For PR automake/347:
	* automake.in (rule_define): Given portability warning if "%" seen
	in target name.
	(TARGET_PATTERN): Added `%'.
	* tests/Makefile.am (TESTS): Added percent.test.
	* tests/percent.test: New file.

2002-08-15  Art Haas  <ahaas@neosoft.com>

	* lib/am/depend2.am: Use correct name for dependency file in
	libtool fastdep case.

2002-08-14  Art Haas  <ahaas@neosoft.com>

	* lib/am/depend2.am: Added missing `;'.

2002-08-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Python): Fix wording.

	* tests/ext2.test: New file.  This bug is present in Automake 1.6.3
	and was fixed by the change on variable_conditions_permutations
	and invert_conditions on 2002-05-16.
	* tests/Makefile.am (TESTS): Add ext2.test.
	Reported by Ladislav Strojil.

2002-08-01  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* aclocal.in (parse_arguments): Add `dirlist' paths add the
	very end of the search path, after aclocal-APIVERSION/ and
	aclocal/.
	* automake.texi (Macro search path): Adjust to reflect the
	new ordering.
	* tests/dirlist.test: Check for this.

2002-07-31  Charles Wilson  <cwilson@ece.gatech.edu>

	* aclocal.in (parse_arguments): Add support for extending
	default macro search path, using a `dirlist' file within
	the aclocal directory.
	* automake.texi (Invoking aclocal): Move option descriptions into ...
	(aclocal options): ... this new node.
	(Macro search path): New node.
	* tests/dirlist.test: New file.
	* tests/Makefile.am (TESTS): Add dirlist.test.
	* m4/dirlist: New file.
	* m4/Makefile.am (EXTRA_DIST): Add dirlist.
	* tests/defs: Honor any installed dirlist when searching for
	libtool.m4 and gettext.m4.
