@@ -184,6 +184,7 @@ gnits3.test \
 header.test \
 implicit.test \
 include.test \
+include2.test \
 info.test \
 insh.test \
 insh2.test \
