@@ -1,3 +1,12 @@
+2002-08-19  Tom Tromey  <tromey@redhat.com>
+
+	For PR automake/348:
+	* tests/Makefile.am (TESTS): Added include2.test.
+	* tests/include2.test: New file.
+	* tests/include.test: Check to make sure include file is
+	distributed.
+	* automake.in (read_am_file): Distribute included files.
+
 2002-08-19  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	Fix for PR automake/345:
